--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "goit-node-rest-api",
   "type": "module",
   "scripts": {
-    "start": "node ./app.js",
-    "dev": "nodemon ./app.js"
+    "start": "node ./index.js",
+    "dev": "nodemon ./index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -14,6 +14,6 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.4"
   }
 }
