--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,9 @@ MONGODB_USER=
 MONGODB_PASSWORD=
 MONGODB_URL=
 MONGODB_NAME=
+MONGODB_NAME_TEST=
 JWT_SECRET= 
+
+UKR_NET_PASSWORD=
+UKR_NET_EMAIL=
+BASE_URL=
